--- a/package.json
+++ b/package.json
@@ -1,1 +1,43 @@
-
+{
+  "name": "mock-usdc",
+  "version": "1.0.0",
+  "description": "A mock USDC token contract for testing and development",
+  "main": "index.js",
+  "scripts": {
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "test:coverage": "hardhat coverage",
+    "test:gas": "hardhat test --gas-reporter",
+    "deploy:local": "hardhat run scripts/deploy.js --network localhost",
+    "node": "hardhat node"
+  },
+  "keywords": [
+    "solidity",
+    "ethereum",
+    "erc20",
+    "usdc",
+    "hardhat",
+    "smart-contracts",
+    "defi"
+  ],
+  "author": "Afolabi Samson <afolabisamson20@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "hardhat": "^2.19.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Codegobli/mock-usdc.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Codegobli/mock-usdc/issues"
+  },
+  "homepage": "https://github.com/Codegobli/mock-usdc#readme"
+}
